Increase height of 'about' to fix view on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -82,11 +82,12 @@ section.scrolling>section.title>svg {
 }
 
 section.scrolling>section.about {
-  scroll-snap-align: start;
+  scroll-snap-align: center;
   color: var(--hero-color);
   height: 100%;
   background-color: var(--background-color);
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-bottom: 10%;
 }
